# LevelSetFusion-Python

./: .backup.travis.yml  .gitignore  .gitmodules  .travis.yml  README.md  __init__.py  autotune_SobolevFusion.py  backup.travis.yml  build_optimizer.py  data_term.py  dataset.py  hns_optimizer2d.py  hns_visualizer.py  interpolation.py  level_set_term.py  multiframe_experiment.py  optimize1D.py  optimize2D.py  optimizer2d.py  plot_csv.py  point.py  requirements.txt  requrements.txt  run_hierarchical_optimizer2d.py  run_hierarchical_optimizer2d_multipair.py  run_hierarchical_optimizer3d.py  run_hierarchical_optimizer3d_multipair.py  run_hierarchical_optimizer_2d_multipair.py  run_hns_optimizer.py  run_optimizer2d.py  run_resampling_experiment.py  run_resampling_experiment3.py  run_sdf_2_sdf2d.py  run_slavcheva_optimizer2d.py  sampling.py  sdf_2_sdf2d.py  sdf_gradient_resp_to_twist.py  sdf_gradient_wrt_to_twist.py  singleframe_experiment.py  slavcheva_optimizer2d.py  (+10 more)
archive/: analyze_tuning_stats.py  autotune_SobolevFusion.py  old_optimize2D.py  optimize1D.py  warpAKAP2D.py
calib/: __init__.py  app_unsynced.py  camera.py  camerarig.py  chessboard.py  io.py  video.py
calib/utils/: __init__.py  custom_format_io.py
cpp/: CMakeLists.txt
cpp/cmake/: DetectPython.cmake
cpp/src/: eigen_numpy.cpp  hello_mod.cc  module.cc  module.cpp  python.cc
cpp/src/math/: conversion.hpp  convolution.cpp  convolution.hpp  eigen_types.hpp  eigen_utils.hpp  gradients.cpp  gradients.hpp  math_utils.h  math_utils.hpp  matrix2.hpp  matrix_base.hpp  platform_independence.hpp  statistics.cpp  tensors.cpp  tensors.hpp  vector2.hpp  vector3.hpp  vector_operations.hpp
cpp/src/nonrigid_optimization/: DataTermComputer.cpp  DataTermComputer.hpp  boolean_operations.hpp  data_term.cpp  data_term.hpp  energy_gradient.cpp  energy_gradient.hpp  field_resampling.cpp  field_resampling.hpp  filtered_statistics.cpp  filtered_statistics.hpp  full_gradient.cpp  interpolation.cpp  interpolation.hpp  logging.cpp  logging.hpp  max_norm.cpp  max_norm.hpp  optimizer2d.cpp  optimizer2d.hpp  smoothing_term.cpp  smoothing_term.hpp  sobolev_optimizer.cpp  sobolev_optimizer.hpp  sobolev_optimizer2d.cpp  sobolev_optimizer2d.hpp  utils.hpp
cpp/src/traversal/: field_traversal_cpu.hpp
cpp/tests/: test_data_math.hpp  test_data_nonrigid_optimization.hpp  test_math.cpp  test_nonrigid_optimization.cpp
cpp_old/: .cproject  .gitignore  .project  CMakeLists.txt
cpp_old/cmake/: DetectPython.cmake
cpp_old/src/math/: statistics.cpp  statistics.hpp  typedefs.hpp  vector_base.hpp
cpp_old/src/nonrigid_optimization/: data_term.hpp  full_gradient.hpp  logging.cpp  sobolev_optimizer2d.hpp
cpp_old/src/traversal/: field_traversal_cpu.hpp
cpp_old/tests/: test_data_nonrigid_optimization.hpp
experiment/: build_hierarchical_optimizer_helper.py  build_optimizer.py  build_sdf_2_sdf_optimizer_helper.py  build_slavcheva_optimizer_helper.py  dataset.py  experiment_shared_routines.py  multiframe_experiment.py  multipair_hierarchical_optimizer_arguments.py  path_utility.py  resampling_experiment.py  resampling_experiment2.py  resampling_experiment3.py  resampling_experiment4.py  run_hierarchical_optimizer_2d_multipair.py  run_hns_optimizer.py  singleframe_experiment.py
experiment/hierarchical_optimizer/: __init__.py  build_helper.py  multipair_arguments.py
ext_argparse/: __init__.py  argproc.py  argument.py
math_utils/: __init__.py  convolution.py  elliptical_gaussians.py  parametrics.py  resampling.py  tenmat.py  transformation.py  tucker.py
nonrigid_opt/: __init__.py  field_warping.py  hierarchical_optimizer2d.py  hns_optimizer2d.py  slavcheva_optimizer2d.py
nonrigid_opt/hierarchical/: __init__.py  hierarchical_optimization_visualizer.py  hierarchical_optimizer2d.py
nonrigid_opt/slavcheva/: level_set_term.py  slavcheva_optimizer2d.py  smoothing_term.py  sobolev_filter.py
rigid_opt/: __init__.py  sdf_2_sdf_optimizer2d.py  sdf_2_sdf_visualizer.py  sdf_generation.py  sdf_gradient_field.py  sdf_gradient_wrt_twist.py  transformation.py
sktensor/: __init__.py  core.py  cp.py  dedicom.py  indscal.py  ktensor.py  rescal.py  sptensor.py  tenmat.py  tucker.py
sktensor/tests/: test_base.py  test_dtensor.py  test_ktensor.py  test_sptensor.py  test_utils.py
tests/: ewa_test_data.py  hnso_fixtures.py  test_affine_of_voxel2d.py  test_conversions.py  test_convolution.py  test_data_term.py  test_energy.py  test_field_pyramid.py  test_field_warping.py  test_hierarchical_optimizer2d.py  test_hns_optimizer2d.py  test_interpolation.py  test_math.py  test_matrix_a_term.py  test_nonrigid_optimization.py  test_path.py  test_resampling.py  test_rigid_alignment.py  test_sdf_2_sdf_optimizer.py  test_sdf_generation.py  test_sdf_gradient_field_wrt_twist.py  test_sdf_gradient_resp_to_twist.py  test_sdf_gradient_wrt_to_twist.py  test_sdf_gradient_wrt_twist.py  test_slavcheva_optimizer.py  test_smoothing_term.py  test_tsdf.py  test_tsdf_ewa.py  test_twist_vector_to_matrix.py  tests.py  tsdf_2d_generation_manualtest.py  tsdf_2d_generation_test.py
tests/test_data/: __init__.py  depth_000000.exr  depth_000003.exr  hierarchical_optimizer_test_data.py  snoopy_calib.txt  test_data_convolution.py  tsdf_test_data.py
tsdf/: common.py  ewa.py  generation.py  generator.py
utils/: field_resampling.py  hardcoded_matrix_converter.py  path.py  point2d.py  printed_matrix_converter.py  printing.py  pyramid.py  sampling.py  tsdf_set_routines.py  visualization.py  vizualization.py
